--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  font-size: 1.2rem;
 }
 
 /* A elements that don't have a class get default styles */
@@ -79,18 +80,50 @@ select {
   }
 }
 
-.container {
+.outer-wrapper {
+    background: hsl(0, 30%, 97%);
     display: grid;
     grid-template-columns: 1fr 2fr;
     height: 100svh;
 }
 
 #bg-img {
-    max-height: 100svh;
+    height: 100svh;
+}
+
+#main-form {
+    width: 100%;
+}
+
+.right-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.cta-wrapper {
+    flex: 1;
+    display: flex;
+    align-items: end;
+    padding: 0rem 2rem;
+}
+
+.form-wrapper {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0rem 2rem;
+    background: #fff;
+}
+
+.login-wrapper {
+    flex: 1;
+    padding: 0rem 2rem;
 }
 
 .main-input-container {
-    min-height: 100svh;
+    min-height: 40svh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
@@ -102,4 +135,9 @@ select {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+#create-account-btn {
+    margin-bottom: 1rem;
+    padding: 1rem 2rem;
 }
