--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,9 @@ select {
     --main-clr-txt: hsl(191, 45%, 5%);
     --secondary-clr-txt: hsl(58, 45%, 5%);
     --accent-clr-txt: hsl(6, 45%, 5%);
+
+    --accent-clr-bdr: hsla(6, 25%, 30%, 0.4);
+    --accent-clr-98: hsl(6, 26%, 98%);
 }
 
 .outer-wrapper {
@@ -186,8 +189,18 @@ select {
     padding: 1rem 2rem;
     box-shadow: 0 2px 3px hsl(0, 10%, 87%);
     background: var(--accent-clr-95);
-    border: 1px solid var(--accent-clr-30);
+    border: 1px solid var(--accent-clr-bdr);
     border-radius: 0.5rem;
+    scale: 1;
+    transition: scale 200ms cubic-bezier(0.6, 0.04, 0.98, 0.335),
+                box-shadow 200ms cubic-bezier(0.6, 0.04, 0.98, 0.335);
+}
+
+#create-account-btn:focus,
+#create-account-btn:hover {
+    box-shadow: 0 2px 5px hsl(0, 20%, 77%),
+                inset 0 0 5px var(--accent-clr-60);
+    scale: 1.1;
 }
 
 label {
@@ -196,6 +209,7 @@ label {
 }
 
 input {
-    border: 1px solid hsl(0, 10%, 77%);
+    border: 1px solid var(--accent-clr-bdr);
+    background: var(--accent-clr-98);
     border-radius: 0.5rem;
 }
