--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,6 @@ select {
 }
 
 label {
-    margin-left: 1rem;
     color: var(--main-clr-txt);
 }
 
@@ -233,6 +232,7 @@ input[required]:valid:focus {
     box-shadow: inset 0 0 2px var(--valid-clr-60);
 }
 
+input[required]:invalid,
 input[required]:invalid:hover,
 input[required]:invalid:focus {
     border: 1px solid var(--accent-clr-60);
