--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ select {
     --accent-clr-txt: hsl(6, 45%, 5%);
 
     --accent-clr-bdr: hsla(6, 25%, 30%, 0.4);
+    --accent-clr-60-fade-50: hsla(6, 65%, 60%, 0.5);
     --accent-clr-98: hsl(6, 26%, 98%);
     --valid-clr-60: hsl(90, 90%, 60%)
 }
@@ -128,7 +129,7 @@ select {
     height: 80%;
     width: 100%;
     top: 10%;
-    z-index: 10;
+    z-index: 2;
     padding: 1.5rem 1rem;
     content: "The Gardening Project";
     text-align: center;
@@ -207,7 +208,7 @@ select {
     color: var(--accent-clr-txt);
 }
 
-#create-account-btn {
+button {
     margin-bottom: 1rem;
     padding: 1rem 2rem;
     box-shadow: 0 2px 3px hsl(0, 10%, 87%),
@@ -257,6 +258,59 @@ input[required]:invalid:focus {
     border: 1px solid var(--accent-clr-60);
 }
 
+.highlighted {
+    color: var(--accent-clr-60);
+}
+
+/* LOGIN MODAL */
+
+.modal-container {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url(/dmytro-tolokonov-Jq3WI9IQgEs-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    z-index: 10;
+    transition: opacity 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    overflow: hidden;
+}
+
+.modal-content {
+    display: grid;
+    width: 100%;
+    padding: 30vw 20rem 15rem 20rem;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    text-align: center;
+    overflow: hidden;
+}
+
+.modal-content.fade {
+    opacity: 0;
+}
+
+.modal-content > button {
+    margin: 1rem 3rem;
+    min-width: 150px;
+}
+
+.modal-title {
+    grid-column: 1/3;
+}
+
+@media (max-aspect-ratio: 1/1), (orientation: portrait) {
+    .modal-container {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+}
 
 @media (width < 880px) {
     .main-input-container {
