--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  font-size: clamp(16px, 1.6rem, 2.2rem);
+  font-size: clamp(16px, 1.2rem, 2.2rem);
   font-family: 'Ysabeau Office', sans-serif;
 }
 
@@ -130,11 +130,11 @@ select {
     width: 100%;
     top: 10%;
     z-index: 2;
-    padding: 1.5rem 1rem;
+    padding: 1rem 1.2rem;
     content: "The Gardening Project";
     text-align: center;
     font-family: 'Dancing Script', cursive;
-    font-size: max(32px, 4rem);
+    font-size: clamp(30px, 4rem, 48px);
     font-weight: 700;
     background: radial-gradient(circle at center, hsla(6, 25%, 10%, 0.8) 0%, hsla(6, 25%, 10%, 0) 90%);
     color: var(--accent-clr-95);
@@ -144,6 +144,9 @@ select {
     width: 100%;
 }
 
+#cta {
+    font-size: max(18px, 2rem);
+}
 
 .outer-right-wrapper {
     min-height: 100svh; 
@@ -156,7 +159,7 @@ select {
 .right-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
     min-height: 100svh;
     background: linear-gradient(to left, var(--main-clr-95-fade-10) 0%, var(--main-clr-95) 80%);
 }
@@ -180,7 +183,7 @@ select {
 
 .login-wrapper {
     flex: 1;
-    padding: 0rem 2rem;
+    padding: 0rem 1rem;
     background: transparent;
     transition: background 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
@@ -192,25 +195,25 @@ select {
     align-items: center;
     padding-right: 14rem;
     justify-content: left;
-    gap: 0rem 1rem;
+    gap: 0rem 0.5rem;
 }
 
 .input-container {
+    position: relative;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
+    font-size: 18px;
 }
 
 #motivator {
-    padding-top: 1rem;
-    font-size: max(24px, 2.8rem);
+    font-size: max(2.2rem, 24px);
     font-family: 'Dancing script', cursive;
     color: var(--accent-clr-txt);
 }
 
 button {
-    margin-bottom: 1rem;
-    padding: 1rem 2rem;
+    padding: 1rem 0.5rem;
     box-shadow: 0 2px 3px hsl(0, 10%, 87%),
                 inset 0 0 1px var(--accent-clr-60);
     background: var(--accent-clr-95);
@@ -221,18 +224,36 @@ button {
                 box-shadow 200ms cubic-bezier(0.6, 0.04, 0.98, 0.335);
 }
 
-#create-account-btn:focus,
+#create-account-btn:focus-within,
 #create-account-btn:hover {
     box-shadow: 0 2px 5px hsl(0, 20%, 77%),
                 inset 0 0 5px var(--accent-clr-60);
     scale: 1.1;
 }
 
-label {
+.input-container > label {
+    position: relative;
+    top: calc(1.4em + 0.8vw);
+    left: 5px;
+    color: hsla(191, 20%, 5%, 0.5);
+    transition: color 300ms ease-in-out,
+                top 300ms ease-in-out;
+    z-index: 2;
+}
+
+.input-container:hover > label,
+.input-container:focus-within > label {
     color: var(--main-clr-txt);
+    top: 0.5rem;
+    left: 5px;
+}
+
+.input-container input:not(:placeholder-shown) {
+    background: blue;
 }
 
 input {
+    position: relative;
     border: 1px solid var(--accent-clr-bdr);
     background: var(--accent-clr-98);
     padding: 0.2rem 0.5rem;
@@ -315,7 +336,7 @@ input[required]:invalid:focus {
 @media (width < 880px) {
     .main-input-container {
         grid-template-columns: repeat(1, 1fr);
-        padding-right: 14rem;
+        padding-right: 4vw;
     }
     .login-wrapper {
         background: var(--main-clr-95);
